--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -10,21 +10,26 @@
   <%= @person.last_name %>
 </p>
 
-<ul>
-  <% @person.phone_numbers.each do |phone| %>
-    <li><%= phone.number %>
-      <%= link_to('edit', edit_phone_number_path(phone)) %>
-      <%= link_to('delete', phone_number_path(phone), :method => "delete") %>
-    </li>
-  <% end %>
-</ul>
+<div id="phone_numbers">
+  <ul>
+    <% @person.phone_numbers.each do |phone| %>
+      <li><%= phone.number %>
+        <%= link_to('edit', edit_phone_number_path(phone)) %>
+        <%= link_to('delete', phone_number_path(phone), :method => "delete") %>
+      </li>
+    <% end %>
+  </ul>
+</div>
 
-<ul>
-  <% @person.email_addresses.each do |email| %>
-    <li><%= email.address %>
-    </li>
-  <% end %>
-</ul>
+<div id="email_addresses">
+  <ul>
+    <% @person.email_addresses.each do |email| %>
+      <li><%= email.address %>
+        <%= link_to('edit', edit_email_address_path(email)) %>
+      </li>
+    <% end %>
+  </ul>
+</div>
 
 <%= link_to 'Add phone number', new_phone_number_path(person_id: @person.id) %> |
 <%= link_to 'Add email address', new_email_address_path(person_id: @person.id) %> |
