--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,15 +1,17 @@
-<p id="notice"><%= notice %></p>
+<div class="company">
 
-<p>
-  <strong>Name:</strong>
-  <%= @company.name %>
-</p>
+  <p id="notice"><%= notice %> </p>
 
-<%= render 'phone_numbers/phone_numbers', :phone_numbers => @company.phone_numbers %>
+  <h2><%= @company.name %></h2>
 
-<%= render 'email_addresses/email_addresses', :email_addresses => @company.email_addresses %>
+  <%= render 'phone_numbers/phone_numbers', :phone_numbers => @company.phone_numbers %>
 
-<%= link_to 'Add phone number', new_phone_number_path(contact_id: @company.id, contact_type: 'Company') %> |
-<%= link_to 'Add email address', new_email_address_path(contact_id: @company.id, contact_type: 'Company') %> |
-<%= link_to 'Edit', edit_company_path(@company) %> |
-<%= link_to 'Back', companies_path %>
+  <%= render 'email_addresses/email_addresses', :email_addresses => @company.email_addresses %>
+
+  <ul class="actions">
+    <li><%= link_to 'Add phone number', new_phone_number_path(contact_id: @company.id, contact_type: 'Company') %></li>
+    <li><%= link_to 'Add email address', new_email_address_path(contact_id: @company.id, contact_type: 'Company') %></li>
+    <li><%= link_to 'Edit', edit_company_path(@company) %></li>
+    <li><%= link_to 'Back', companies_path %></li>
+  </ul>
+</div>
