--- a/app/views/email_addresses/edit.html.erb
+++ b/app/views/email_addresses/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @email_address %> |
-<%= link_to 'Back', email_addresses_path %>
+<%= render 'back', :email_address => @email_address %>
