--- a/app/views/phone_numbers/edit.html.erb
+++ b/app/views/phone_numbers/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @phone_number %> |
-<%= link_to 'Back', phone_numbers_path %>
+<%= render 'back', :phone_number => @phone_number %>
