--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,14 @@
   <%= content_tag :div, msg, class: "alert alert-info" %>
 <% end %>
 
+<div id="account">
+    <% if current_user %>
+      <%= link_to "Logout", logout_path, id: "logout", method: 'delete' %>
+    <% else %>
+      <%= link_to "Login", login_path, id: "login" %>
+    <% end %>
+</div>
+
 <%= yield %>
 
 </body>
